crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/constructor_without_body/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5700] Error: Constructor must be implemented if declared.
   ╭─[input.sol:8:5]
   │
 8 │     constructor();
   │     ───────┬──────  
   │            ╰──────── Error occurred here.
───╯
